lang.java.statics.test/tests/positive/packages/class-visible-in-own-compilation-unit-of-nested-package.yes.javtest
STATIX ok
JAVAC  ok

[p] {
    [q] {
        [A]
        package p.q;
        public class A {
            public A a;
        }
    }
}
