lang.java.statics.test/tests/negative/packages/unit-in-wrong-package.no.javtest
STATIX fail 
JAVAC  fail 

[p] {

    [A]
    package q;
    public class A {}

}
